<resources>
    <string name="app_name">LabourCinnect1</string>
    <string name="register_here">Register Here</string>
    <string-array name="states_array">
        <item>Select State</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Lakshadweep</item>
        <item>Delhi</item>
        <item>Puducherry</item>
    </string-array>
    <string-array name="Maharashtra">
        <item>Select District</item>
        <item>Ahmednagar</item>
        <item>Akola</item>
        <item>Amravati</item>
        <item>Aurangabad</item>
        <item>Beed</item>
        <item>Bhandara</item>
        <item>Buldhana</item>
        <item>Chandrapur</item>
        <item>Dhule</item>
        <item>Gadchiroli</item>
        <item>Gondia</item>
        <item>Hingoli</item>
        <item>Jalna</item>
        <item>Jalgaon</item>
        <item>Kolhapur</item>
        <item>Latur</item>
        <item>Mumbai City</item>
        <item>Mumbai Suburban</item>
        <item>Nagpur</item>
        <item>Nanded</item>
        <item>Nashik</item>
        <item>Osmanabad</item>
        <item>Palghar</item>
        <item>Parbhani</item>
        <item>Pune</item>
        <item>Raigad</item>
        <item>Ratnagiri</item>
        <item>Sangli</item>
        <item>Satara</item>
        <item>Solapur</item>
        <item>Thane</item>
        <item>Wardha</item>
        <item>Washim</item>
        <item>Yavatmal</item>
    </string-array>
    <string-array name="TypeOfWork">
        <item>Type Of Work</item>
        <item>Construction Work</item>
        <item>Electricity Work</item>
        <item>Carpentering Work</item>
        <item>Loading/Unloading Work</item>
        <item>Painting Work</item>
        <item>Plumbing Work</item>
    </string-array>
    <string name="labour_connect" translatable="true">Labour Connect</string>
    <string name="search_here">Search here</string>
    <string name="search_icon">Search icon</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

    </string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close">\n</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="labourconnect_labour">LabourConnect(Labour)</string>
    <string name="construction_work">Construction Work</string>
    <string name="plumbing">Plumbing</string>
    <string name="electricity_work">Electricity Work</string>
    <string name="carpentering_work">Carpentering Work</string>
    <string name="loading_unloading_work">Loading/Unloading Work</string>
    <string name="painting_work">Painting Work</string>
    <string name="phone">📞 Phone</string>
    <string name="address">📍 Address</string>
    <string name="mumbai_maharashtra">Mumbai, Maharashtra</string>
    <string name="change_password">🔒 Change Password</string>
    <string name="edit_profile">✏️ Edit Profile</string>
    <string name="labourconnect_contractor">LabourConnect(Contractor)</string>
    <string name="construction_workers">Construction Workers</string>
    <string name="plumbers">Plumbers</string>
    <string name="electricians">Electricians</string>
    <string name="carpenters">Carpenters</string>
    <string name="loading_and_unloading_worker">Loading and Unloading Worker</string>
    <string name="painters">Painters</string>
    <string name="tanaya_is_a_software_engineer_with_expertise_in_android_development">Tanaya is a software engineer with expertise in Android development.</string>
    <string name="disha_is_a_data_scientist_specializing_in_ai_and_machine_learning">Disha is a data scientist specializing in AI and machine learning.</string>
    <string name="mansi_is_a_ui_ux_designer_with_a_passion_for_creative_designs">Mansi is a UI/UX designer with a passion for creative designs.</string>
    <string name="prapti_is_a_backend_developer_focused_on_java_and_databases">Prapti is a backend developer focused on Java and databases.</string>
    <string name="contractor_is_a_software_engineer_with_expertise_in_android_development">Contractor is a software engineer with expertise in Android development.</string>
    <string name="the_factories_act_1881">The Factories Act, 1881</string>
    <string name="the_trade_union_act_1926">The Trade Union Act, 1926</string>
    <string name="the_payment_of_wages_act_1936">The Payment of Wages Act, 1936</string>
    <string name="the_minimum_wages_act_1948">The Minimum Wages Act, 1948</string>
    <string name="criteria_set_by_the_labour_laws_in_india">Criteria set by the Labour Laws in India</string>
    <string name="the_factories_act_1881_enacted_during_british_rule_this_was_one_of_the_earliest_pieces_of_legislation_addressing_the_working_conditions_in_factories_it_aimed_to_regulate_industrial_workers_hours_of_work_health_and_safety">The Factories Act, 1881\n\n: Enacted during British rule, this was one of the earliest pieces of legislation addressing the working conditions in factories. \nIt aimed to regulate industrial workers\' hours of work, health, and safety.</string>
    <string name="the_trade_union_act_1926_this_legislation_provided_legal_recognition_to_trade_unions_allowing_workers_to_organize_and_bargain_for_better_working_conditions_collectively_it_marked_a_significant_step_towards_protecting_workers_rights">The Trade Union Act, 1926: \n\nThis legislation provided legal recognition to trade unions, allowing workers to organize and bargain for better working conditions collectively. \nIt marked a significant step towards protecting workers\' rights..</string>
    <string name="this_act_ensured_the_timely_payment_of_wages_to_industrial_workers_providing_a_legal_framework_for_the_calculation_and_disbursement_of_wages_and_preventing_unfair_practices_by_employers">This act ensured the timely payment of wages to industrial workers, providing a legal framework for the calculation and disbursement of wages, and preventing unfair practices by employers.</string>
    <string name="criteria_of_labour_laws_in_india_india">Criteria of labour laws in India\tIndia\n</string>
    <string name="minimum_wage_in_rs_rs_178_per_day">Minimum wage (in Rs.)\tRs. 178 per day\n</string>
    <string name="standard_working_hours_12_hours_per_day">Standard working hours\t12 hours per day\n</string>
    <string name="overtime_limit_maximum_1_hour_per_day">Overtime limit (Maximum)\t1 hour per day\n</string>
    <string name="pay_for_overtime_in_100">Pay for overtime (in %)\t100.</string>
    <string name="the_minimum_wages_act_1948_enacted_to_safeguard_the_interests_of_labourers_this_law_established_the_concept_of_minimum_wages_to_ensure_that_workers_receive_remuneration_sufficient_for_a_basic_standard_of_living">The Minimum Wages Act, 1948: \n\nEnacted to safeguard the interests of labourers, this law established the concept of minimum wages to ensure that workers receive remuneration sufficient for a basic standard of living.</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully!</string>
    <string name="login_here">Login Here</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="name">Name</string>
    <string name="state">State</string>
    <string name="age">Age</string>
    <string name="type_of_work">Type of Work</string>
    <string name="location_address">Location (Address)</string>
    <string name="get_location">Get Location</string>
    <string name="register">Register</string>
    <string name="labour_information">Labour Information</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="please_enter_a_10_digit_number">Please enter a 10-digit number</string>
    <string name="age_must_be_greater_than_18">Age must be greater than 18</string>
    <string name="password_must_be_greater_than_6_characters">Password must be greater than 6 characters</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile No</string>
    <string name="we_value_your_feedback">We Value Your Feedback!</string>
    <string name="help_us_improve_by_sharing_your_experience">Help us improve by sharing your experience</string>
    <string name="your_name">Your Name</string>
    <string name="tell_us_about_your_experience">Tell us about your experience</string>
    <string name="would_you_recommend_us_to_others">Would you recommend us to others?</string>
    <string name="yes_definitely">Yes, definitely</string>
    <string name="no_not_really">No, not really</string>
    <string name="maybe">Maybe</string>
    <string name="what_could_we_improve">What could we improve?</string>
    <string name="service_quality">Service quality</string>
    <string name="response_time">Response time</string>
    <string name="user_interface">User interface</string>
    <string name="communication">Communication</string>
    <string name="pricing">Pricing</string>
    <string name="contacts">Contacts</string>
    <string name="about_us">About Us</string>
    <string name="laws_for_labour">Laws for Labour</string>
    <string name="select_language">Select Language</string>
    <string name="english">english</string>
    <string name="marathi">marathi</string>
    <string name="settings">Settings</string>
    <string name="admin_login">Admin Login</string>
    <string name="logout">LogOut</string>
    <string name="share">Share</string>
</resources>