<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--contractor Registration-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/start1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register Contractor"
            android:textColor="#429E9D"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="152dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/labour1"
            android:contentDescription="Profile Picture"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_photo_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:background="@drawable/button_square"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerStates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:background="@drawable/shape"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColorHint="#000000"
            android:background="@drawable/shape"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:textColorHint="#000000"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textColorHint="#000000"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:inputType="number"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerWorkType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_of_work"
            android:background="@drawable/shape"
            android:layout_marginTop="20dp" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#000000"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_address"
            android:textColorHint="#000000"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:focusable="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGetLocation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/get_location"
            android:textColor="#FFFFFF "
            android:textSize="25sp"
            android:background="@drawable/button_square"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#FFFFFF "
                android:textSize="25sp"
                android:background="@drawable/button_square"
                android:layout_marginEnd="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFFFF "
                android:textSize="25sp"
                android:background="@drawable/button_square" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
